@@ -4,7 +4,7 @@ rc.news - Start or stop INN daemons
 
 =head1 SYNOPSIS
 
-B<rc.news> [start | stop]
+B<rc.news> [C<start> | C<stop>]
 
 =head1 DESCRIPTION
 
@@ -45,6 +45,16 @@ If F<rc.news.local> exists in I<pathbin>:  B<rc.news.local> is run with
 argument C<start> or C<stop> (to perform site-specific startup or shutdown
 tasks).
 
+=item *
+
+When started, if INN appears to have previously been shut down during
+its expiry process, run B<expirerm> if there are articles to unlink.
+
+=item *
+
+When started, if overview data appears to have just been rebuilt and
+F<active> needs to be renumbered, then actually renumber it.
+
 =back
 
 =head1 OPTIONS
@@ -58,8 +68,7 @@ B<rc.news> initiates INN startup.
 
 =item C<stop>
 
-If the first argument is C<stop>, B<rc.news> initiates INN shutdown.  It
-is recommended to throttle the server first as described in ctlinnd(8).
+If the first argument is C<stop>, B<rc.news> initiates INN shutdown.
 
 =back
 
@@ -67,16 +76,15 @@ is recommended to throttle the server first as described in ctlinnd(8).
 
 To start INN and leave certain error messages going to the terminal:
 
-       su - news -s /bin/sh -c <pathbin in inn.conf>/rc.news
+       su news -s /bin/sh -c <pathbin in inn.conf>/rc.news
 
 To run INN at startup time from appropriate system boot scripts:
 
-       su - news -s /bin/sh -c <pathbin>/rc.news >/dev/console
+       su news -s /bin/sh -c <pathbin>/rc.news >> <pathlog>/rc.news 2>&1
 
-To stop INN (throttling first):
+To stop INN:
 
-       <pathbin>/ctlinnd throttle reason
-       su - news -s /bin/sh -c '<pathbin>/rc.news stop'
+       su news -s /bin/sh -c '<pathbin>/rc.news stop'
 
 =head1 BUGS
 
@@ -95,6 +103,6 @@ $Id$
 
 =head1 SEE ALSO
 
-ctlinnd(8), cnfsstat(8), inn.conf(5), innwatch(8), ovdb(5).
+ctlinnd(8), cnfsstat(8), expirerm(8), inn.conf(5), innwatch(8), ovdb(5).
 
 =cut
