@@ -198,6 +198,15 @@ the patch.
 
 =item *
 
+Add new B<-i> flag to both B<cnfsstat> and B<innwatch> to specify
+how many seconds they should sleep at startup.  It will especially be
+useful in B<rc.news> so that these scripts are actually started and then
+sleep by themselves, instead of being started a minute after B<innd>
+and therefore not being properly stopped if C<rc.news stop> is invoked
+during that minute.
+
+=item *
+
 Fixed how B<innupgrade> is executed during an update of an INN
 installation; on a few systems like AIX, it fails to run because its
 taint mode was unproperly declared.
